--- a/2-labbymezzage/css/style.css
+++ b/2-labbymezzage/css/style.css
@@ -47,6 +47,7 @@ body {
     border: 0px solid;
 }
 #messageArea p{
+ 
     display: block;    
     max-width:346px;    
     background-color: #7CB061;
@@ -65,6 +66,7 @@ body {
     margin-bottom: -4px;
     
 }
+
 #msgCount {
     text-align: right;
 }
@@ -77,22 +79,30 @@ body {
     margin-left: 316px;
     background-color: Green;
 }
-
 #imgClose {
-    background-image: url(pics/remove_32.png); 
-    background-repeat: no-repeat; 
-    background-position: top right;    
-    width: 24px;
-    height: 24px;
-    display: block;
+    width: 16px;
+    height: 16px;
     float:right;
-    border: solid 1px ;  
+}
+#IIIimgClose {
+  
+
 }
 .not{
+        background-image: url(pics/remove_16.png); 
+    background-repeat: no-repeat; 
+    background-position: top right;  
+     position : fixed;
+    top: 0px;
+    right: 0px;   
+    
     background-image: url(pics/SPbaun6.ico); 
     background-repeat: no-repeat; 
     background-position: top left;
     text-indent: 40px;
+    
+
+ 
 }
 
 p {    
