--- a/2-labbymezzage/css/style.css
+++ b/2-labbymezzage/css/style.css
@@ -46,18 +46,19 @@ body {
     margin: 0px;
     border: 0px solid;
 }
-#messageArea p{
+#messageArea div{
  
     display: block;    
     max-width:346px;    
     background-color: #7CB061;
-    text-align: left;
     border: 1px solid;
     padding: 5px;    
     overflow: auto;
     color: #1B7326;
+    margin: 10px;
+    position: relative;
 }
-#messageArea p p{
+#messageArea div div{
     text-align: right;
     font-size: 8px;
     border: 0px solid;
@@ -66,43 +67,40 @@ body {
     margin-bottom: -4px;
     
 }
+#messageArea div .msgTime {
+    text-align: right;
+    font-size: 8px;
+    border: 0px solid;
+    padding: 0px;
+    margin-top: -4px;
+    margin-bottom: -4px;
+    position: absolute;
+    right: 0px;
+}
 
 #msgCount {
     text-align: right;
 }
-#msgTime{
-    text-align: right;
-    font-size: 8px;
-    border: 0px solid;
-}
+
 #sendButton{
     margin-left: 316px;
     background-color: Green;
 }
-#imgClose {
+.imgClose {
     width: 16px;
     height: 16px;
     float:right;
+    position: relative;
+}
+.imgTime {
+    width: 16px;
+    height: 16px;
+    float:right;
+    position: relative; 
 }
 
 #messageID {
   visibility: hidden;
-}
-.not{
-        background-image: url(pics/remove_16.png); 
-    background-repeat: no-repeat; 
-    background-position: top right;  
-     position : fixed;
-    top: 0px;
-    right: 0px;   
-    
-    background-image: url(pics/SPbaun6.ico); 
-    background-repeat: no-repeat; 
-    background-position: top left;
-    text-indent: 40px;
-    
-
- 
 }
 
 p {    
