--- a/3-gameon/css/style.css
+++ b/3-gameon/css/style.css
@@ -7,14 +7,35 @@ footer, header, hgroup, main, menu, nav, section{
 
 body { 
     background-color: #C9C9C9;
+
 }
 
 
 #container{
-
     max-width: 416px;
     margin: 0 auto;
-    background-color: #F3E789;   
+    background-color: #E493E8;   
     border: 2px solid #3D402A;
+    float: left;
+}
+
+.memoryBoard{
+    background-color: #BFA0FF;
+    padding: 30px;
+    border: 2px solid #3D402A;
+    
+    
+}
+
+.memoryTable {
+    background-color: white;      
+    border: solid 1px black ;
+    border-spacing: 4px 4px;    
+}
+
+.memoryTable th, td, tr{
+    border: solid 1px black ;
+    height: 24px;
+    width: 24px;
 
 }
