--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -38,20 +38,32 @@ body{
 .Window{
     height: 200px;
     width: 200px;
-    background-color: yellow;   
+    background-color: #CDCFD9;   
     border: solid black 1px;
     padding: 4px;
     margin: 4px;
+    postion:relative; left: 50px;
+    float: left;
+}
+.Window hide{
+    display: none;
 }
 .topLabel{
     height: 24px;
     border-bottom: solid black 1px;
-    background-color: brown;
+    background-color: #525357;
+}
+.imgClose {
+    width: 16px;
+    height: 16px;
+    float:right;
+    position: relative;
 }
 .bottomLabel{
-    height: 24px;   
+    height: 16px;   
     border-top : solid black 1px;    
-    background-color: brown;
+    background-color: #525357;
+    position: relative; bottom: -160px; 
 }
 
 .appIcon{
