done added app name to top label

--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -45,7 +45,10 @@ body{
     position: absolute;;
     float: left;
 }
-
+.appName{
+    width: 120;
+    float: left;
+}
 .Window hide{
     display: none;
 }
