--- a/5-pwd/css/imageGallery.css
+++ b/5-pwd/css/imageGallery.css
@@ -1,9 +1,9 @@
 
 .imgGallery {
 /*    background-color: white; */ 
-    height: 220px;
+    height: 258px;
     font-size: 8px;
-    padding: 2px;
+    padding-top: 2px;
 /*    border: solid 2px blue ; */
     border-spacing: 4px 4px;
 /*    margin: 0 auto; */
