--- a/5-pwd/css/imageGallery.css
+++ b/5-pwd/css/imageGallery.css
@@ -1,22 +1,39 @@
 
 .imgGallery {
 /*    background-color: white; */ 
-    height: 258px;
+    height: 354px;
     font-size: 8px;
     padding-top: 2px;
 /*    border: solid 2px blue ; */
-    border-spacing: 4px 4px;
+/*    border-spacing: 4px 4px; */
 /*    margin: 0 auto; */
 /*    display:flex; */
-    justify-content: center;
-    float: left;
     overflow: auto;
+    justify-content: center;       
+
 }
+
 .image{
     
     justify-content: center;    
     border-spacing: 0px 0px;
     border: 4px solid yellow;
     justify-content: center;  
-    overflow: auto;    
+    overflow: auto;   
+      
+}
+.thumbCell{
+    background-color: grey;
+    float: left;   
+    margin: 2px ;
+ 
+}
+.thumbWrapper{
+    margin: 0 auto;  
+}
+.thumbPicImg{
+    margin: 0 auto;  
+}
+.thumbPicLink{
+    margin: 0 auto;  
 }
