--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -3,7 +3,8 @@
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, main, menu, nav, section{ 
  display: block; 
-} 
+}
+
 body{
     background-color: black;
 }
@@ -12,34 +13,23 @@ body{
     max-width: 960px; 
     margin-left:auto;
     margin-right:auto;
-    
 }
 
 #content{
-
     height: 640px;   
     background-color: #A2A3AB;   
     border: 2px solid yellow;
-
-/*    overflow: auto; 
-    background-color: #F3E789;   
-*/
 }
+
 #divider{
 
     height: 85px;
     background-color: black;
-    
-/*    border: 2px solid #3D402A;
-    border: 2px solid yellow;
-    border-top: 14px solid black;
-*/    
 }
-#appArea{
 
+#appArea{
     height: 56px;
     border: 2px solid #3D402A;
-/*    opacity: 0.5; */
     margin-top: -71px;
     border: 2px solid yellow;
 }
@@ -50,44 +40,41 @@ body{
     background-color: #CDCFD9;   
     border: solid yellow 3px;
     padding: 4px;
-/*    margin: 4px;*/
-    position: absolute;;
-    float: left;
+    position: absolute;
 }
+
 .windowMain{
     height: 356px;
-
 }
+
 .appName{
     width: 120;
     float: left;
     padding-left: 8px;
     padding-top: 4px;
 }
-.Window hide{
-    display: none;
-}
+
 .topLabel{
     height: 24px;
     border-bottom: solid black 1px;
     background-color: #525357;
 }
+
 .imgClose {
     width: 16px;
     height: 16px;
     margin-right: 6px;
     margin-top: 4px;
-    
     float:right;
-    position: relative;
 }
+
 .bottomLabel{
     height: 16px;   
     border-top : solid black 1px;    
     background-color: #525357;
     padding-top: 4px; 
-    bottom: 4px;
 }
+
 .appIcon{
     height: 50px;
     width: 50px;
@@ -96,6 +83,7 @@ body{
     float: left;
     margin: 4px;
 }
+
 .labelIcon{
     height: auto;
     max-width: 16px;
@@ -110,21 +98,4 @@ body{
     float: left;
     margin-top: -2px;
     margin-left: 6px;
-}
-.loadIcon .loading{
-    display: block;
-    height: auto;
-    max-width: 16px;
-    float: left;
-    margin: 4px;
-}
-.loadIcon loading{
-    display: block;
-    height: auto;
-    max-width: 16px;
-    float: left;
-    margin: 4px;
-}
-#memoryIcon{
-
 }
