--- a/5-pwd_require/css/style.css
+++ b/5-pwd_require/css/style.css
@@ -35,6 +35,7 @@ body{
     border: 2px solid #3D402A;
     margin-top: -71px;
     border: 2px solid yellow;
+    background-color: black;       
 }
 #desktopImage{
   height: 480px;
@@ -85,7 +86,7 @@ body{
 .appIcon{
     height: 50px;
     width: 50px;
-    border: solid black 1px;
+
     background-color: yellow;
     float: left;
     margin: 4px;
